--- a/ubo-resume.html
+++ b/ubo-resume.html
@@ -174,7 +174,7 @@
                                                                 
                                                       </ul> </div>
                   
-         <article style="text-decoration: underline;"> Hobbies </article>
+         <article style="text-decoration: underline;"> Loisirs </article>
              <div style="margin-left: 10px;">
                     <ul>
                          <li>Football </li>
