--- a/ubo-resume.html
+++ b/ubo-resume.html
@@ -23,6 +23,9 @@
 </head>
 
 <body >
+<hr width: 5px;
+border-left: 1px solid gray;
+height:70px ; >
 <section id="contact" style="margin-left: 80px">
                            <h2>Contact</h2>
                               <address>
