--- a/ubo-resume.html
+++ b/ubo-resume.html
@@ -31,10 +31,10 @@ height:70px ; >
                               <address>
                                      <ul>
                                           <li>RGUIG AHMED </li>
-                           <li>06 72 09 61 22 </li>
+                           			<li>06 72 09 61 22 </li>
                                            <li><a href="mailto:ahmedrguig04@gmail.com">ahmedrguig04@gmail.com</a></li>
                                      </ul>
-                         </address>
+                       		  </address>
                 </section>
    <div id="wrapper">
 
@@ -43,9 +43,9 @@ height:70px ; >
            <img src="images/monimage.jpg" alt="photo de cv"/>
          </div>
          <div id="coordonnees" >
-               <h1>RGUIG Ahmed</h1>
+               <h1>RGUIG Ahmed</h1><hr></hr>
                <h2> Ingénieur en informtique à la recherche d'un stage de fin d'études </h2>
-               <hr></hr>
+               
                <div>Adresse : 11 BIS rue de la DIGUE</div>
                <div>Ville   : Brest, 29200, France</div>
                <div>Email   : ahmedrguig04@gmail.com</div>
@@ -77,13 +77,13 @@ height:70px ; >
 
           <article style="text-decoration: underline;"><i class="icon-camera-retro"></i> Expérience Professionnel</article>
               <dl style="margin-left: 40px;">
-                    <dt>Juin-Aout: Mission freelance</dt>
-                       <dd style="display: inline;" >2018</dd><dd class="listeexperience" style="display: inline;"></dd>
+                    <dt>Juin-Aout : 2018 Mission freelance</dt>
+                       <dd class="listeexperience" style="display: inline;"></dd>
                        <dd class="listeformation"> Participation à la réalisation d'un site web à base de Symfony2 </dd>
                </dl>
                <dl style="margin-left: 40px;">
-                    <dt>Juin-Septembre: Administration système </dt>
-                       <dd style="display: inline; text-align: center;">2017</dd><dd class="listeexperience" style="display: inline;">ENOVA R&T</dd>
+                    <dt>Juin-Septembre 2017 : Administration système </dt>
+                       <dd class="listeexperience" style="display: inline;">ENOVA R&T</dd>
                        <dd class="listeformation"> Stage ingénieur Assistant-Mission  : Mise en place d'une solution IPbx sécurisée basée sur le logiciel ASTERISK 
 - Etude générale de la voix sur IP
 -ETude des attaques contre la VOIP et bonne pratiques de sécurisation 
@@ -91,8 +91,8 @@ height:70px ; >
 - Sécurisation de la solution </dd>
                </dl>
                <dl style="margin-left: 40px;">
-                    <dt>Juin-Juillet: Développeur web </dt>
-                       <dd style="display: inline;">2016</dd><dd class="listeexperience" style="display: inline;">Pixycom </dd>
+                    <dt>Juin-Juillet 2016: Développeur web </dt>
+                      <dd class="listeexperience" style="display: inline;">Pixycom </dd>
                        <dd class="listeformation">Intégration d'une équipe de développeur web pour la réalisation d'un site web à base de PHP ( LARAVEL )</dd>
                </dl>
      </section>
