--- a/ubo-resume.html
+++ b/ubo-resume.html
@@ -4,7 +4,7 @@
      <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <title> Mon CV </title>
-<meta name="description" content="Etudiante à l'UBO en Master2 DOSI">
+<meta name="description" content="Etudiant à l'UBO en Master2 DOSI">
 <style>
     .listeformation {
               margin-left : 100px;
@@ -13,8 +13,10 @@
               margin-left : 20px;
             }
 </style>
-<link rel="stylesheet" href="stylesheet.css" />
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/fontawesome.min.css" />
+<link rel="stylesheet" href="resume.css" />
+<link rel="stylesheet" href="responsive.css" />
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/fontawesome.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <meta name="Keywords" content="web,developer,resume" />
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -23,16 +25,14 @@
 </head>
 
 <body >
-<hr width: 5px;
-border-left: 1px solid gray;
-height:70px ; >
+
 <section id="contact" style="margin-left: 80px">
                            <h2>Contact</h2>
                               <address>
                                      <ul>
                                           <li>RGUIG AHMED </li>
                            			<li>06 72 09 61 22 </li>
-                                           <li><a href="mailto:ahmedrguig04@gmail.com">ahmedrguig04@gmail.com</a></li>
+                                               		<li><ahref="mailto:ahmedrguig04@gmail.com">ahmedrguig04@gmail.com</a></li>
                                      </ul>
                        		  </address>
                 </section>
