--- a/ubo-resume.html
+++ b/ubo-resume.html
@@ -51,9 +51,12 @@
 
 	
 	<div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-	<span itemprop="streetAddress" style="margin-left: 178px;" >Adresse : 11 bis rue de la digue</span>
-	<span itemprop="addressLocality" style="margin-left: 200px;">Brest</span>
-	<span itemprop="postalCode" style="margin-left: 200px;">29200</span>
+	<span itemprop="streetAddress" style="margin-left: 200px;" >Adresse : 11 bis rue de la digue</span>
+	<span itemprop="addressLocality" style="margin-left: 200px;">Ville :	Brest          	29200 </span></br>
+	<span itemprop="birthDate" itemscope itemtype="http://schema.org/birthDate" style="margin-left: 200px;">Année/Date naissance: 22 Avril 1995 à MARSEILLE  </span>
+	<span itemprop="nationality" itemscope itemtype="http://schema.org/nationality" style="margin-left: 200px;">Nationnalité :    Marocaine  </span>
+</br></br><hr>
+	<span itemprop="postalCode" style="margin-left: 200px;"></span>
 	</div>      
      </header>
 
